<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/theme"
        android:key="theme_category">

        <ListPreference
            android:key="theme"
            android:title="@string/theme"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:defaultValue="light" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Export Settings"
        android:key="export_category">

        <ListPreference
            android:key="default_format"
            android:title="@string/default_export_format"
            android:entries="@array/export_format_entries"
            android:entryValues="@array/export_format_values"
            android:defaultValue="png" />

        <ListPreference
            android:key="default_resolution"
            android:title="@string/default_export_resolution"
            android:entries="@array/resolution_entries"
            android:entryValues="@array/resolution_values"
            android:defaultValue="150" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Data"
        android:key="data_category">

        <Preference
            android:key="clear_cache"
            android:title="@string/clear_cache"
            android:summary="Clear all cached thumbnails and data" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Legal"
        android:key="legal_category">

        <Preference
            android:key="privacy_policy"
            android:title="@string/privacy_policy"
            android:summary="View our privacy policy" />

        <Preference
            android:key="about"
            android:title="@string/about"
            android:summary="About this app" />

    </PreferenceCategory>

</PreferenceScreen>

